# ArchOpen

./: .gitignore  .prettierrc  CMakeLists.txt  LICENSE  build.js  example_config.json  index.js  makefile  package-lock.json  package.json  readme.md
assets/: app.rc  app.res
src/: ArchOpen.js  commands.cpp  commands.h  configmanager.cpp  configmanager.h  configmigrator.cpp  configmigrator.h  main.cpp  main.h  romlauncher.cpp  romlauncher.h
src/cli/: Commands.js  commands.cpp  commands.h  logger.cpp  logger.h  styles.h
src/config/: ConfigManager.js  ConfigMigrator.js  configmanager.cpp  configmanager.h  configmigrator.cpp  configmigrator.h
src/core/: RomLauncher.js  romlauncher.cpp  romlauncher.h
src/utils/: logger.js
